@startuml

title __SIMONWORKS-CONTEXT's Class Diagram__\n

  namespace org.simonworks.projects.context {
    abstract class org.simonworks.projects.context.AbstractBeanContext {
    }
  }
  

  namespace org.simonworks.projects.context {
    interface org.simonworks.projects.context.BeanContext {
    }
  }
  

  namespace org.simonworks.projects.context {
    class org.simonworks.projects.context.BeanInfo {
    }
  }
  

  namespace org.simonworks.projects.context {
    interface org.simonworks.projects.context.BeanRegistry {
    }
  }
  

  namespace org.simonworks.projects.context {
    interface org.simonworks.projects.context.BeanRegistryProvider {
    }
  }
  

  namespace org.simonworks.projects.context {
    class org.simonworks.projects.context.ClassUtils {
    }
  }
  

  namespace org.simonworks.projects.context {
    class org.simonworks.projects.context.AbstractClasspathBeanRegistryProvider {
    }
  }
  

  namespace org.simonworks.projects.context {
    class org.simonworks.projects.context.DefaultBeanContextImpl {
    }
  }
  

  namespace org.simonworks.projects.context {
    class org.simonworks.projects.context.MapBeanRegistry {
    }
  }
  

  namespace org.simonworks.projects.context {
    class org.simonworks.projects.context.DefaultSingletonsCache {
    }
  }
  

  namespace org.simonworks.projects.context {
    interface org.simonworks.projects.context.SingletonsCache {
    }
  }
  

  namespace org.simonworks.projects.context {
    namespace annotation {
      interface org.simonworks.projects.context.annotation.Dependency {
      }
    }
  }
  

  org.simonworks.projects.context.AbstractBeanContext .up.|> org.simonworks.projects.context.BeanContext
  org.simonworks.projects.context.AbstractBeanContext o-- org.simonworks.projects.factory.BeanFactory : beanFactory
  org.simonworks.projects.context.AbstractBeanContext o-- org.simonworks.projects.context.BeanRegistry : beanRegistry
  org.simonworks.projects.context.AbstractBeanContext o-- org.simonworks.projects.context.SingletonsCache : singletonsCache
  org.simonworks.projects.context.BeanInfo o-- org.simonworks.projects.context.BeanInfo.Lifecycle : lifecycle
  org.simonworks.projects.context.AbstractClasspathBeanRegistryProvider .up.|> org.simonworks.projects.context.BeanRegistryProvider
  org.simonworks.projects.context.DefaultBeanContextImpl -up-|> org.simonworks.projects.context.AbstractBeanContext
  org.simonworks.projects.context.MapBeanRegistry .up.|> org.simonworks.projects.context.BeanRegistry
  org.simonworks.projects.context.DefaultSingletonsCache .up.|> org.simonworks.projects.context.SingletonsCache


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
